# python_simple_mppi

./: .gitignore  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
Docker/: Dockerfile
data/: ovalpath.csv
docker/: Dockerfile  README.md
notebooks/: mppi_cartpole.ipynb  mppi_pathtracking.ipynb  mppi_pathtracking_obav.ipynb  mppi_pendulum.ipynb  ovalpath.csv
scripts/: cartpole.py  mppi_cartpole.py  mppi_pathtracking.py  mppi_pathtracking_obav.py  mppi_pendulum.py  pathtracking_kbm.py  pathtracking_kbm_obav.py  pendulum.py
