[tool.poetry]
name = "python_simple_mppi"
version = "0.1.0"
description = ""
authors = ["MizuhoAOKI <mizuhoaoki1998@gmail.com>"]
readme = "README.md"
packages = [{include = "python_simple_mppi"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
notebook = "^7.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
