[project]
name = "python_simple_mppi"
version = "0.2.0"
description = "Python implementation of MPPI (Model Predictive Path-Integral) controller to understand the basic idea."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "MizuhoAOKI", email = "mizuhoaoki1998@gmail.com" }
]
dependencies = [
    "numpy>=1.25.2",
    "matplotlib>=3.7.2",
    "notebook>=7.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]